soluçao bem ruim

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>exceçoes personalizadas</name>
+	<name>e.p.muitoRuim</name>
 	<comment></comment>
 	<projects>
 	</projects>
